--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "default postcss configuration",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,19 @@
   "bugs": {
     "url": "https://github.com/sadcitizen/postcss-config/issues"
   },
-  "homepage": "https://github.com/sadcitizen/postcss-config#readme"
+  "homepage": "https://github.com/sadcitizen/postcss-config#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^8.4.1",
+    "postcss-calc": "^6.0.1",
+    "postcss-clearfix": "^2.0.1",
+    "postcss-color-function": "^4.0.1",
+    "postcss-custom-properties": "^7.0.0",
+    "postcss-custom-selectors": "^4.0.1",
+    "postcss-easings": "^1.0.1",
+    "postcss-import": "^11.1.0",
+    "postcss-nested": "^3.0.0"
+  }
 }
