--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "autoprefixer": "^8.4.1",
+    "postcss-apply": "^0.11.0",
     "postcss-calc": "^6.0.1",
     "postcss-clearfix": "^2.0.1",
     "postcss-color-function": "^4.0.1",
+    "postcss-custom-media": "^7.0.7",
     "postcss-custom-properties": "^7.0.0",
     "postcss-custom-selectors": "^4.0.1",
     "postcss-easings": "^1.0.1",
